# DNS-Resolver

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: RunTest.yml  cmake-multi-platform.yml
include/: DNS Resolver.hpp
test/: CMakeLists.txt  enum.hpp  main.cpp
